force-app/main/default/objects/CPQCollectionMap__c/CPQCollectionMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CPQ Collection Map</label>
</CustomObject>