force-app/main/default/objects/CPQCollectionMap__c/fields/CPQCollection__c.field-meta.xml
<CustomField>
    <fullName>CPQCollection__c</fullName>
    <label>CPQCollection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>