force-app/main/default/objects/CPQCollectionMap__c/fields/LEGACY_BUSINESS__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_BUSINESS__c</fullName>
    <label>LEGACY BUSINESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>