force-app/main/default/objects/CPQCollectionMap__c/fields/PRODUCT_HIER_1__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_HIER_1__c</fullName>
    <label>PRODUCT HIER 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>