force-app/main/default/objects/CPQCollectionMap__c/fields/PRODUCT_HIER_2__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_HIER_2__c</fullName>
    <label>PRODUCT HIER 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>